# software_updater_tool

./: .gitignore  main.py  pyproject.toml
software_updater_tool/: controller.py  model.py  view.py
software_updater_tool/Contracts/: abstractmodel.py  abstractview.py
software_updater_tool/Datas/: viewsettings.py
software_updater_tool/WorkersBrewery/: workersbrewery.py
tests/: test_software_update_tool.py
