[tool.poetry]
name = "software-updater-tool"
version = "0.1.0"
description = ""
authors = ["Edimar de Sá <edimarfreitas95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
